@@ -93,16 +93,9 @@ name|this
 operator|.
 name|proxStream
 operator|=
-operator|(
-name|IndexInput
-operator|)
-name|parent
-operator|.
-name|proxStream
-operator|.
-name|clone
-argument_list|()
+literal|null
 expr_stmt|;
+comment|// the proxStream will be cloned lazily when nextPosition() is called for the first time
 block|}
 DECL|method|seek
 specifier|final
@@ -157,6 +150,12 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|proxStream
+operator|!=
+literal|null
+condition|)
 name|proxStream
 operator|.
 name|close
@@ -346,6 +345,27 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|proxStream
+operator|==
+literal|null
+condition|)
+block|{
+comment|// clone lazily
+name|proxStream
+operator|=
+operator|(
+name|IndexInput
+operator|)
+name|parent
+operator|.
+name|proxStream
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|lazySkipPointer
